@@ -9,19 +9,19 @@ import org.apache.logging.log4j.Logger;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class ReadFromFile implements ReaderFromFileInt {
-    final static Logger logger = LogManager.getLogger();
+    static final Logger logger = LogManager.getLogger();
 
     @Override
     public String readString(String filename) throws WrongDataException {
         String str = null;
-    try (BufferedReader reader = Files.newBufferedReader(Path.of(filename))){
+    try (BufferedReader reader = Files.newBufferedReader(Paths.get(filename))){
         DataValidation validation = new DataValidation();
         while (reader.ready()){
             str = reader.readLine();
-            if(validation.isCorrectData(str) && validation.isIncludesNumbers(str)){
+            if(validation.isCorrectData(str) && validation.isIncludesNumbers(str)) {
                 break;
             } else {
                 str = null;
